Issue fixes, JS error fix, CSS fix to remove border and some spacing between the content and graphs

--- a/dcc-portal-ui/app/scripts/repository/styles/_repository.scss
+++ b/dcc-portal-ui/app/scripts/repository/styles/_repository.scss
@@ -214,3 +214,11 @@
     }
   }
 }
+
+#files-section{
+  .graphs-container {
+    border-bottom: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+}
